<resources>
    <string name="app_name">Sygna Widget</string>
    <string name="widget_name">Fichaje</string>
    <string name="widget_title">Fichaje</string>
    <string name="widget_cd_primary">Accion principal</string>
    <string name="widget_cd_descanso">Descanso</string>
    <string name="widget_cd_comida">Comida</string>
    <string name="widget_cd_profile_photo">Actualizar foto de perfil</string>
    <string name="widget_metric_last">Ultimo fichaje</string>
    <string name="widget_metric_next">Siguiente</string>
    <string name="widget_metric_mode">Modo</string>
    <string name="quick_actions_widget_title">Accesos rapidos</string>
    <string name="quick_actions_widget_description">Widget de accesos rapidos</string>
    <string name="quick_action_label_invoice">Factura</string>
    <string name="quick_action_label_expense">Gasto</string>
    <string name="quick_action_label_product">Producto</string>
    <string name="quick_action_label_customer">Cliente</string>
    <string name="quick_action_title_new_invoice">Nueva factura</string>
    <string name="quick_action_title_add_expense">Anadir gasto</string>
    <string name="quick_action_title_add_product">Anadir producto</string>
    <string name="quick_action_title_new_customer">Nuevo cliente</string>
    <string name="quick_action_subtitle_new_invoice">Crear factura</string>
    <string name="quick_action_subtitle_add_expense">Añadir gasto</string>
    <string name="quick_action_subtitle_add_product">Nuevo producto</string>
    <string name="quick_action_subtitle_new_customer">Nuevo cliente</string>
    <string name="quick_action_cd_new_invoice">Nueva factura</string>
    <string name="quick_action_cd_add_expense">Anadir gasto</string>
    <string name="quick_action_cd_add_product">Anadir producto</string>
    <string name="quick_action_cd_new_customer">Nuevo cliente</string>
    <string name="quick_action_cd_back">Volver al panel</string>
    <string name="quick_action_back_to_dashboard">Volver al panel</string>
    <string name="quick_action_screen_hint">Acceso rapido listo dentro de la app.</string>
    <string name="quick_action_label_product_subtitle">Nuevo producto</string>
</resources>
